--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,74 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
+yarn.lock # If you are using npm and package-lock.json, you might keep yarn.lock if you ever switch
+package-lock.json 
+# If you are using yarn and yarn.lock, you might keep package-lock.json if you ever switch
+# (Choose one of the above lock files to commit, the other to ignore if both exist, or commit both if your team might switch)
+# For this project, assuming you primarily use one, let's assume package-lock.json is used, so yarn.lock might be ignored.
+# Or, if you prefer to commit both to allow flexibility, remove the one you don't use from here.
+# Typically, you commit the lock file for the package manager you *are* using.
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production
 /build
 
-# misc
-.DS_Store
+# Local Environment Variables
+# Never commit these files as they may contain sensitive A P I keys or credentials
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.*.local
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+
+# IDEs and Editors
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# JetBrains IDEs (IntelliJ, WebStorm, PyCharm, etc.)
+.idea/
+*.iml
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Atom
+.atom/
+
+# OS-generated files
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Miscellaneous
+*.swp # Swap files from Vim
+*.swo # Swap files from Vim
